--- a/src/app/ventana-principal/components/agregar-usuario/agregar-usuario.component.html
+++ b/src/app/ventana-principal/components/agregar-usuario/agregar-usuario.component.html
@@ -1,1 +1,57 @@
-<p>agregar-usuario works!</p>
+<h1 mat-dialog-title>Agregar Usuario</h1>
+
+<form [formGroup]="form" (ngSubmit)="agregarUsuario()" >
+
+    <mat-dialog-content>
+        <div class="row">
+            <div class="column">
+                <mat-form-field appearance="fill">
+                    <mat-label>Nombre</mat-label>
+                    <input matInput placeholder="Ingrese Nombre del Usuario" autocomplete="off" formControlName="NAME_USER">
+                </mat-form-field>
+
+                <div class="error">
+                    <span *ngIf="form.get('NAME_USER')?.hasError('required') && form.get('NAME_USER')?.touched">
+                        El nombre del Usuario es un campo <strong>requerido</strong>.
+                    </span>
+                </div>
+            </div>
+        </div>
+        <br>
+        <br>
+        <div class="row">
+            <div class="column">
+                <mat-form-field appearance="fill">
+                    <mat-label>Apellido</mat-label>
+                    <input matInput type="text" placeholder="Ingrese el Apellido del Usuario" autocomplete="off" formControlName="SURNAME_USER">
+                </mat-form-field>
+                <div class="error">
+                    <span *ngIf="form.get('SURNAME_USER')?.hasError('required') && form.get('SURNAME_USER')?.touched">
+                        El ID del Usuario es un campo <strong>requerido</strong>.
+                    </span>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="column">
+                <mat-form-field appearance="fill">
+                    <mat-label>ID Usuario</mat-label>
+                    <input matInput type="string" placeholder="ID del Usuario" autocomplete="off" formControlName="ID_USER">
+                </mat-form-field>
+                <div class="error">
+                    <span *ngIf="form.get('ID_USER')?.hasError('required') && form.get('ID_USER')?.touched">
+                        El ID del Usuario es un campo <strong>requerido</strong>.
+                    </span>
+                </div>
+            </div>
+        </div>
+
+    </mat-dialog-content>
+
+    <mat-dialog-actions>
+        <button type="button" mat-button mat-dialog-close mat-button color="accent">Cancelar</button>
+        <button type="submit" mat-raised-button color="accent" [mat-dialog-close]="true" cdkFocusInitial
+        >Agregar</button>
+    </mat-dialog-actions>
+
+</form>
