--- a/src/app/ventana-principal/components/tabla-empresas/tabla-empresas.component.html
+++ b/src/app/ventana-principal/components/tabla-empresas/tabla-empresas.component.html
@@ -21,27 +21,22 @@
           <th mat-header-cell *matHeaderCellDef> PHONE </th>
           <td mat-cell *matCellDef="let element"> {{element.PHONE_EMPRESA}} </td>
         </ng-container>
-      
-        <ng-container matColumnDef="editar">
+
+        <ng-container matColumnDef="acciones">
             <th mat-header-cell *matHeaderCellDef></th>
-            <td mat-cell *matCellDef="let element">
-              <mat-icon class="btn_download" (click)="onEditEmpresa()" matTooltip="Editar">edit</mat-icon>
-            </td>
-        </ng-container>   
-        
-        <ng-container matColumnDef="eliminar">
-            <th mat-header-cell *matHeaderCellDef></th>
-            <td mat-cell *matCellDef="let element">
+            <td mat-cell *matCellDef="let element" style="text-align: right;">
+              <mat-icon class="btn_edit" (click)="onEditEmpresa()" matTooltip="Editar">edit</mat-icon>
+              &nbsp;
               <mat-icon class="btn_delete" (click)="onDeleteEmpresa()"  matTooltip="Eliminar">delete</mat-icon>
             </td>
         </ng-container>   
-      
+        
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       
         <!-- Row shown when there is no matching data. -->
         <tr class="mat-row" *matNoDataRow>
-          <td class="mat-cell" colspan="4">No existen imagenes para mostrar</td>
+          <td class="mat-cell" colspan="4">No existen empresas para mostrar</td>
         </tr>
     </table>
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
