--- a/src/app/ventana-principal/components/tabla-usuarios/tabla-usuarios.component.html
+++ b/src/app/ventana-principal/components/tabla-usuarios/tabla-usuarios.component.html
@@ -21,27 +21,22 @@
           <th mat-header-cell *matHeaderCellDef> SURNAME </th>
           <td mat-cell *matCellDef="let element"> {{element.SURNAME_USER}} </td>
         </ng-container>
-      
-        <ng-container matColumnDef="editar">
-            <th mat-header-cell *matHeaderCellDef></th>
-            <td mat-cell *matCellDef="let element">
-              <mat-icon class="btn_download" (click)="onEditUser()" matTooltip="Editar">edit</mat-icon>
-            </td>
-        </ng-container>   
-        
-        <ng-container matColumnDef="eliminar">
-            <th mat-header-cell *matHeaderCellDef></th>
-            <td mat-cell *matCellDef="let element">
-              <mat-icon class="btn_delete" matTooltip="Eliminar" (click)="onDeleteUser()">delete</mat-icon>
-            </td>
-        </ng-container>   
+       
+        <ng-container matColumnDef="acciones">
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let element" style="text-align: right;">
+            <mat-icon class="btn_edit" (click)="onEditUser()" matTooltip="Editar">edit</mat-icon>
+            &nbsp;
+            <mat-icon class="btn_delete" (click)="onDeleteUser()"  matTooltip="Eliminar">delete</mat-icon>
+          </td>
+      </ng-container>
       
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       
         <!-- Row shown when there is no matching data. -->
         <tr class="mat-row" *matNoDataRow>
-          <td class="mat-cell" colspan="4">No existen imagenes para mostrar</td>
+          <td class="mat-cell" colspan="4">No existen usuarios para mostrar</td>
         </tr>
     </table>
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
