--- a/src/app/ventana-principal/components/agregar-empresa/agregar-empresa.component.html
+++ b/src/app/ventana-principal/components/agregar-empresa/agregar-empresa.component.html
@@ -20,17 +20,6 @@
         <br>
         <br>
         <div class="row">
-            <div class="column">
-                <mat-form-field appearance="fill">
-                    <mat-label>ID Empresa</mat-label>
-                    <input matInput type="string" placeholder="ID de la empresa" autocomplete="off" formControlName="ID_EMPRESA">
-                </mat-form-field>
-                <div class="error">
-                    <span *ngIf="form.get('ID_EMPRESA')?.hasError('required') && form.get('ID_EMPRESA')?.touched">
-                        El ID de la Empresa es un campo <strong>requerido</strong>.
-                    </span>
-                </div>
-            </div>
 
             <div class="column">
                 <mat-form-field appearance="fill">
@@ -51,9 +40,9 @@
     </mat-dialog-content>
 
     <mat-dialog-actions>
-        <button type="button" mat-button mat-dialog-close mat-button color="accent">Cancelar</button>
+        <button type="button" (click)="cancelarAgregar()" mat-button mat-dialog-close mat-button color="accent">Cancelar</button>
         <button type="submit" mat-raised-button color="accent" [mat-dialog-close]="true" cdkFocusInitial
-        >Agregar</button>
+        >Aceptar</button>
     </mat-dialog-actions>
 
 </form>
