--- a/src/app/ventana-principal/components/tabla-empresas/tabla-empresas.component.html
+++ b/src/app/ventana-principal/components/tabla-empresas/tabla-empresas.component.html
@@ -14,7 +14,13 @@
         <!-- Descripcion Column -->
         <ng-container matColumnDef="NAME">
           <th mat-header-cell *matHeaderCellDef> NAME </th>
-          <td mat-cell *matCellDef="let element"> {{element.NAME_EMPRESA}} </td>
+          <td mat-cell *matCellDef="let element"> 
+
+            <a (click)="getUserTable(element.ID_EMPRESA)" matTooltip="Desplegar Usuarios">
+              {{element.NAME_EMPRESA}}
+            </a> 
+            
+          </td>
         </ng-container>
 
         <ng-container matColumnDef="PHONE">
@@ -25,9 +31,9 @@
         <ng-container matColumnDef="acciones">
             <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let element" style="text-align: right;">
-              <mat-icon class="btn_edit" (click)="onEditEmpresa()" matTooltip="Editar">edit</mat-icon>
+              <mat-icon class="btn_edit" (click)="onEditEmpresa(element, 'update')" matTooltip="Editar">edit</mat-icon>
               &nbsp;
-              <mat-icon class="btn_delete" (click)="onDeleteEmpresa()"  matTooltip="Eliminar">delete</mat-icon>
+              <mat-icon class="btn_delete" (click)="onDeleteEmpresa(element.ID_EMPRESA)"  matTooltip="Eliminar">delete</mat-icon>
             </td>
         </ng-container>   
         
