--- a/src/app/ventana-principal/components/tabla-usuarios/tabla-usuarios.component.html
+++ b/src/app/ventana-principal/components/tabla-usuarios/tabla-usuarios.component.html
@@ -5,13 +5,12 @@
     </mat-form-field>
     <table class="mat-elevation-z5" mat-table [dataSource]="dataSource" >
   
-        <!-- Fecha Column -->
         <ng-container matColumnDef="ID">
           <th mat-header-cell *matHeaderCellDef> ID </th>
           <td mat-cell *matCellDef="let element"> {{element.ID_USER}} </td>
         </ng-container>
       
-        <!-- Descripcion Column -->
+  
         <ng-container matColumnDef="NAME">
           <th mat-header-cell *matHeaderCellDef> NAME</th>
           <td mat-cell *matCellDef="let element"> {{element.NAME_USER}} </td>
@@ -25,9 +24,9 @@
         <ng-container matColumnDef="acciones">
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let element" style="text-align: right;">
-            <mat-icon class="btn_edit" (click)="onEditUser()" matTooltip="Editar">edit</mat-icon>
+            <mat-icon class="btn_edit" (click)="onEditUser(element, 'update')" matTooltip="Editar">edit</mat-icon>
             &nbsp;
-            <mat-icon class="btn_delete" (click)="onDeleteUser()"  matTooltip="Eliminar">delete</mat-icon>
+            <mat-icon class="btn_delete" (click)="onDeleteUser(element.ID_USER)"  matTooltip="Eliminar">delete</mat-icon>
           </td>
       </ng-container>
       
