--- a/src/app/ventana-principal/ventana-principal.component.html
+++ b/src/app/ventana-principal/ventana-principal.component.html
@@ -13,22 +13,23 @@
         </mat-toolbar>
         <mat-card>
             <div class="buttons">
-                <button mat-fab extended color="accent" (click)="onAgregarEmpresa()">
+                <button mat-fab extended color="accent" (click)="onAgregarEmpresa(null, 'new')">
                     <mat-icon>add_business</mat-icon>
                     Añadir Empresa
                 </button>
             </div>
             <mat-card-content>
                 
-                <app-tabla-empresas></app-tabla-empresas>
-
+                <app-tabla-empresas (idEmpresa)="getIdEmpresa($event)"></app-tabla-empresas>
+                
             </mat-card-content>
         </mat-card>
     </div>
 
     <br>
 
-    <div class="body_div">
+    <div class="body_div" *ngIf="idEmpresa">
+        
         <mat-toolbar class="toolbar_tables">
             <mat-toolbar-row>
                 <span>Lista de Usuarios</span>
@@ -36,14 +37,14 @@
         </mat-toolbar>
         <mat-card>
             <div class="buttons">
-                <button mat-fab extended color="accent" (click)="onAgregarUsuario()">
+                <button mat-fab extended color="accent" (click)="onAgregarUsuario(null, 'new')">
                     <mat-icon>person_add</mat-icon>
                     Añadir Usuario
                 </button>
             </div>
             <mat-card-content>
                 
-                <app-tabla-usuarios></app-tabla-usuarios>
+                <app-tabla-usuarios [idEmpresa]="idEmpresa"></app-tabla-usuarios>
 
             </mat-card-content>
         </mat-card>
